# kaspad-stratum

./: Cargo.toml  README.md  build.rs
proto/: protowire.proto
src/: kaspad.rs  main.rs  pow.rs  stratum.rs  uint.rs
src/stratum/: jobs.rs  server.rs
